5.3.0 -> 5.4a1:
    - jbj: nss: add RSA/DSA sign/generate methods.
    - jbj: ssl: resurrect RSA verification. RSA breaks my brain every time.
    - jbj: ssl: add RSA/DSA sign/generate methods.
    - jbj: tests: stub-in generate/sign/verify test cases for RSA/DSA.
    - jbj: bc: use rpmpricrt() for signing, 3x-4x faster.
    - jbj: bc: resurrect RSA verification. RSA breaks my brain every time.
    - jbj: tests: per-crypto implementation tests for hkp:// retrieval.
    - jbj: bc: add RSA/DSA sign/generate methods.
    - jbj: ssl: plug a memory leak.
    - jbj: nss: use common sec_key/pub_key/sig structures.
    - jbj: pgp: add method to set Elgamal hash.
    - jbj: pgp: add methods for per-implementation cipher/digest/pubkey checks.
    - jbj: pgp: add methods for per-implementation pubkey algo dispatch.
    - jbj: gc: poplate sign/generate methods.
    - jbj: pgp: add methods for ElGamal signatures.
    - jbj: hmac: fix: permit HMAC's to be clone'd (salt size was incorrect).
    - jbj: ssl: populate set/verify/sign/generate methods for ECDSA.
    - jbj: ecdsa: stub-in sign/generate methods for {ECDSA,RSA,DSA}.
    - jbj: hkp: only verify the signhash, not the signature, with V3 signatures.
    - jbj: hkp: fix: avoid encoding issues in user id: truncate to 256b.
    - jbj: hkp: fix: validate rpmdb pubkeys too.
    - jbj: hkp: lazily setup/teardown the global awol/crl Bloom filters.
    - jbj: hkp: use rpmhkp methods for pubkey imports.
    - jbj: hkp: use rpmhkp methods for package signatures..
    - jbj: hkp: use rpmhkp methods for clear-signed run-time dependency probes.
    - jbj: hkp: use rpmhkpLoadSignature.
    - jbj: hkp: expose rpmhkpLoadSignature.
    - jbj: pgp: expose the pgpPkt_s internals.
    - jbj: hkp: test for RPMRC_OK when validating.
    - jbj: hkp: richer return codes from rpmhkpValidate.
    - jbj: hkp: expose more methods, add industrial strength debugging spewage.
    - jbj: hkp: eliminate pgpPrtPkts to load pubkey material.