@@ -1,4 +1,6 @@
 5.3.0 -> 5.4a1:
+    - jbj: nss: add a strerror to decode errors to something meaningful.
+    - jbj: nss: generate "real" PQG params for DSA.
     - jbj: nss: add RSA/DSA sign/generate methods.
     - jbj: ssl: resurrect RSA verification. RSA breaks my brain every time.
     - jbj: ssl: add RSA/DSA sign/generate methods.
